Updated to 0.2.10 files

--- a/data/locale/da/entity-descriptions.cfg
+++ b/data/locale/da/entity-descriptions.cfg
@@ -5,3 +5,4 @@ logistic-robot=Transports stuff between logistic chests.
 logistic-chest-provider=Entry point of the logistic system.
 logistic-chest-storage=Long term storage for the logistic system.
 logistic-chest-requester=Requests specified items from the logistic system.
+basic-splitter=Allows to split transport incoming transport belt cargo 1:1
