--- a/data/locale/da/entity-names.cfg
+++ b/data/locale/da/entity-names.cfg
@@ -61,4 +61,4 @@ item-on-ground=Item on ground
 small-lamp=Lamp
 space-module-wreck=Wreck of the space module
 rocket-defense=Rocket defense
-electric-furnace=Electric Furnace
+basic-splitter=Splitter
