--- a/data/locale/da/misc.cfg
+++ b/data/locale/da/misc.cfg
@@ -2,6 +2,7 @@ not-enough-ingredients=Not enough ingredients.
 building-too-far=You need to get closer to build that.
 building-collision=It can't be built on this location.
 cant-be-damaged=It cant be damaged.
+cant-be-mined=It cant be mined.
 not-allowed-character-in-file-name=Character "__1__" can't be part of the file name.
 empty-file-name=The file name is empty.
 [difficulty]
