--- a/data/locale/da/gui.cfg
+++ b/data/locale/da/gui.cfg
@@ -14,6 +14,13 @@ confirm-restart=Are you sure you want to restart?
 confirm-quit=The game is not saved, are you sure you want to quit?
 confirmation=Confirmation
 notice=Notice
+properties=Properties
+indestructible=Indestructible
+not-minable=Not minable
+not-rotatable=Not rotatable
+not-operable=Not operable
+owner=Owner
+set-filter=Set the Filter
 
 [gui-logistic]
 title=Logistics
@@ -112,6 +119,7 @@ waiting=Waiting
 
 [gui-other-settings]
 title=Other settings
+autosave-interval=Autosave Interval
 locale=Locale (needs restart)
 tooltip-delay=Tooltip delay
 output-console-delay=Message delay
