First few item translations

--- a/data/locale/da/item-names.cfg
+++ b/data/locale/da/item-names.cfg
@@ -1,40 +1,40 @@
 [item-name]
-stone=Stone
-wood=Wood
-raw-wood=Raw wood
-copper-ore=Copper ore
-iron-ore=Iron ore
-coal=Coal
-copper-plate=Copper Plate
-iron-plate=Iron Plate
-steel-plate=Steel Plate
-iron-axe=Iron axe
-steel-axe=Steel axe
-iron-gear-wheel=Iron Gear Wheel
-iron-stick=Iron Stick
-copper-cable=Copper cable
+stone=Sten
+wood=Træ brædder
+raw-wood=Træ
+copper-ore=Kobber malm
+iron-ore=Jern malm
+coal=Kul
+copper-plate=Kobber plade
+iron-plate=Jern plade
+steel-plate=Stål plade
+iron-axe=Jern økse
+steel-axe=Stål økse
+iron-gear-wheel=Jern tandhjul
+iron-stick=Jern stang
+copper-cable=Kobber ledning
 pistol=Pistol
-submachine-gun=Submachine gun
+submachine-gun=Maskinpistol
 rocket-launcher=Rocket launcher
-flame-thrower=Flamethrower
-flame-thrower-ammo=Flamethrower Ammo
-electronic-circuit=Electronic Circuit
-advanced-circuit=Advanced Circuit
-hydraulic-piston=Hydraulic Piston
+flame-thrower=Flammekaster
+flame-thrower-ammo=Flammekaster ammunition
+electronic-circuit=Electronisk kredsløb
+advanced-circuit=Advanceret kredsløb
+hydraulic-piston=Hydraulisk stempel
 basic-armor=Iron armor
 heavy-armor=Heavy armor
-rocket=Rocket
-basic-bullet-magazine=Regular Magazine
+rocket=Rakket
+basic-bullet-magazine=Almindeligt margasin
 piercing-bullet-magazine=Piercing Bullet Magazine
 laser-turret=Laser Turret
-solar-panel=Solar Panel
-fish=Fish
+solar-panel=Sol panel
+fish=Fisk
 computer=Computer
-lab=Lab
+lab=Laboratorie
 science-pack-1=Science Pack 1
 science-pack-2=Science Pack 2
 science-pack-3=Science Pack 3
 alien-science-pack=Alien science pack
-red-wire=Red wire
-green-wire=Green wire
+red-wire=Rød ledning
+green-wire=Grøn ledning
 alien-artifact=Alien artifact
