Finished item-names.cfg

--- a/data/locale/da/item-names.cfg
+++ b/data/locale/da/item-names.cfg
@@ -15,26 +15,26 @@ iron-stick=Jern stang
 copper-cable=Kobber ledning
 pistol=Pistol
 submachine-gun=Maskinpistol
-rocket-launcher=Rocket launcher
+rocket-launcher=Bazooka
 flame-thrower=Flammekaster
 flame-thrower-ammo=Flammekaster ammunition
-electronic-circuit=Electronisk kredsløb
-advanced-circuit=Advanceret kredsløb
+electronic-circuit=Elektronisk kredsløb
+advanced-circuit=Avanceret kredsløb
 hydraulic-piston=Hydraulisk stempel
-basic-armor=Iron armor
-heavy-armor=Heavy armor
-rocket=Rakket
-basic-bullet-magazine=Almindeligt margasin
-piercing-bullet-magazine=Piercing Bullet Magazine
-laser-turret=Laser Turret
-solar-panel=Sol panel
+basic-armor=Jern rustning
+heavy-armor=Tung rustning
+rocket=Raket
+basic-bullet-magazine=Almindeligt magasin
+piercing-bullet-magazine=Panserbrydende magasin
+laser-turret=Laser tårn
+solar-panel=Solpanel
 fish=Fisk
 computer=Computer
 lab=Laboratorie
-science-pack-1=Science Pack 1
-science-pack-2=Science Pack 2
-science-pack-3=Science Pack 3
-alien-science-pack=Alien science pack
+science-pack-1=Videnskabspakke 1
+science-pack-2=Videnskabspakke 2
+science-pack-3=Videnskabspakke 3
+alien-science-pack=Alien videnskabspakke
 red-wire=Rød ledning
 green-wire=Grøn ledning
-alien-artifact=Alien artifact
+alien-artifact=Alien artefakt
