--- a/data/locale/da/item-descriptions.cfg
+++ b/data/locale/da/item-descriptions.cfg
@@ -1,5 +1,5 @@
 [item-description]
-science-pack-1=Used by Lab to do research.
-science-pack-2=Used by Lab to do research.
-science-pack-3=Used by Lab to do research.
-alien-science-pack=Used by Lab to do research.
+science-pack-1=Bruges i laboratoriet til forskning.
+science-pack-2=Bruges i laboratoriet til forskning.
+science-pack-3=Bruges i laboratoriet til forskning.
+alien-science-pack=Bruges i laboratoriet til forskning.
