First stage of gui translation

--- a/data/locale/da/gui-map-generator.cfg
+++ b/data/locale/da/gui-map-generator.cfg
@@ -1,32 +1,32 @@
 [gui-map-generator]
-frequency=Frequency
-size=Size
-richness=Richness
-title=Map generator
+frequency=Frevens
+size=Størelse
+richness=Rigdom
+title=Verden generator
 terrain-segmentation=Terrain segmentation
-forest=Forest
-map-width=Map width (empty for infinite)
-map-height=Map height (empty for infinite)
-generate=Generate
-water=Water
+forest=Skov
+map-width=Verden brede (tom for uendelig)
+map-height=Verden højde (tom for uendelig)
+generate=Generer
+water=Vand
 
 [frequency]
-very-rare=Very Rare
-rare=Rare
-average=Average
-frequent=Frequent
-very-frequent=Very Frequent
+very-rare=Meget sjældent
+rare=Sjældent
+average=Mellem
+frequent=Ofte
+very-frequent=Meget ofte
 
 [size]
-very-small=Very Small
-small=Small
-medium=Medium
-big=Big
-very-big=Very Big
+very-small=Meget lille
+small=Lille
+medium=Mellem
+big=Stor
+very-big=Meget stor
 
 [richness]
-very-poor=Very Poor
-poor=Poor
-regular=Regular
-good=Good
-very-good=Very Good
+very-poor=Meget fattig
+poor=Faggit
+regular=Mellem
+good=Rig
+very-good=Meget rig
