Further translations of controls, description labels, entity names and GUI

--- a/data/locale/da/controls.cfg
+++ b/data/locale/da/controls.cfg
@@ -1,22 +1,22 @@
 [controls]
-move-up=Move up
-move-right=Move right
-move-down=Move down
-move-left=Move left
-shoot-enemy=Shoot enemy
-shoot-selected=Shoot selected
-open-character-gui=Open character screen
-open-technology-gui=Open technology screen
-rotate=Rotate
-pick-items=Pick items on ground
-close-gui=Close window
+move-up=Gå op
+move-right=Gå til højre
+move-down=Gå ned
+move-left=Gå til venstre
+shoot-enemy=Skyd fjænde
+shoot-selected=Skyd valgte
+open-character-gui=Åben karakter menu
+open-technology-gui=Open teknologi menu
+rotate=Roter
+pick-items=Saml op
+close-gui=Luk vindue
 zoom-in=Zoom in
-zoom-out=Zoom out
-toggle-menu=Toggle menu
-toggle-driving=Enter/Leave vehicle
+zoom-out=Zoom ud
+toggle-menu=TOGGLE MENU!
+toggle-driving=Gå in/ud af kørertøj
 clean-cursor=Clean cursor
-mine=Mine
-build=Build
+mine=Grav
+build=Byg
 open-gui=Open object
 drop-cursor=Drop item
 pick-item=Pick item
