--- a/data/locale/da/gui.cfg
+++ b/data/locale/da/gui.cfg
@@ -1,17 +1,17 @@
 [gui]
-tool=Tool
-armor=Armor
-guns=Gun
-ammo=Ammo
-cancel=Back
-character=Character
+tool=Værktøj
+armor=Rustning
+guns=Skydevåben
+ammo=Ammunition
+cancel=Tilbage
+character=Karakter
 inventory=Inventory
 crafting=Crafting
 contents=Contents
-close=Close
-clear=Clear
-confirm-restart=Are you sure you want to restart?
-confirm-quit=The game is not saved, are you sure you want to quit?
+close=Luk
+clear=Slet
+confirm-restart=Er du sikker på at du vil genstarte?
+confirm-quit=Er du sikker på at du vil lukke? Spillet bliver ikke gemt automatisk
 confirmation=Confirmation
 notice=Notice
 properties=Properties
@@ -19,8 +19,8 @@ indestructible=Indestructible
 not-minable=Not minable
 not-rotatable=Not rotatable
 not-operable=Not operable
-owner=Owner
-set-filter=Set the Filter
+owner=Ejer
+set-filter=Set filtret
 
 [gui-logistic]
 title=Logistics
@@ -29,8 +29,8 @@ storage-button=Storage Mode
 requester-button=Consumer Mode
 
 [gui-technology-preview]
-effects=Effects
-no-effects=No Effects
+effects=Effekter
+no-effects=Ingen effekter
 continuations=Allows
 no-continuations=No Continuation
 prerequisites=Requires
@@ -44,36 +44,36 @@ status-available=available
 status-missing-prerequisites=unavailable
 
 [gui-technologies-list]
-title=List of Technologies
+title=TEknologi liste
 
 [gui-technology]
-title=Technologies
+title=Technologier
 
 [gui-current-research]
-researching=Researching
-not-researching=Not researching anything
+researching=Forsker
+not-researching=Forsker ikke noget
 
 [gui-menu]
-main-menu=Main menu
-game=Play
-map-editor=Map editor
-options=Options
-about=About
-exit=Exit
-game-menu=Game
-new-campaign=Start campaign
-new-game=New game
+main-menu=Hoved menu
+game=Spil
+map-editor=Verden redigering
+options=Instillinger
+about=Om
+exit=Luk
+game-menu=GAME
+new-campaign=Start campange
+new-game=Nyt spil
 custom-scenario=Custom scenario
-load-game=Load game
+load-game=Indlæs spil
 replay-game=Replay game
-graphics=Graphics
-sound=Sounds
-controls=Controls
-other=Other
-resume-game=Resume
-restart-game=Restart
-save-game=Save game
-quit-game=Quit game
+graphics=Grafik
+sound=Lyd
+controls=Kontrol
+other=Andre
+resume-game=Fortsæt
+restart-game=Genstart
+save-game=Gem spil
+quit-game=Luk spil
 
 [gui-about]
 version=Version
@@ -81,9 +81,9 @@ release=Release
 website=Website
 
 [gui-save-game]
-title=Save game
-save-as=Save as
-save=Save
+title=Gem spil
+save-as=Gem som
+save=Gem
 
 [gui-game-finished]
 title=Game finished
