--- a/data/locale/da/entity-names.cfg
+++ b/data/locale/da/entity-names.cfg
@@ -1,17 +1,17 @@
 [entity-name]
-stone=Stone
-wooden-chest=Wooden chest
-copper-ore=Copper ore
-iron-ore=Iron ore
-coal=Coal
-stone-furnace=Stone Furnace
-basic-transport-belt=Transport Belt
-fast-transport-belt=Fast Transport Belt
-express-transport-belt=Express Transport Belt
-basic-transport-belt-to-ground=Underground belt
-fast-transport-belt-to-ground=Fast underground belt
-express-transport-belt-to-ground=Express underground belt
-basic-mining-drill=Electric Mining Drill
+stone=Sten
+wooden-chest=Træ kiste
+copper-ore=Kobber malm
+iron-ore=Jern malm
+coal=Kul
+stone-furnace=Sten ovn
+basic-transport-belt=Transportbånd
+fast-transport-belt=Hurtigt transportbånd
+express-transport-belt=Express transportbånd
+basic-transport-belt-to-ground=Undergrunds bånd
+fast-transport-belt-to-ground=Hurtigt undergrunds bånd
+express-transport-belt-to-ground=Express undergrunds bånd
+basic-mining-drill=Electrisk minebor
 burner-mining-drill=Burner Mining Drill
 basic-turret=Battle turret
 gun-turret=Gun turret
@@ -31,34 +31,34 @@ logistic-chest-provider=Provider Chest
 logistic-chest-storage=Storage Chest
 logistic-chest-requester=Requester Chest
 assembling-machine=Assembling Machine
-car=Car
+car=Bil
 straight-rail=Straight Rail
 curved-rail=Curved Rail
-pump=Pump
-pipe=Pipe
-pipe-to-ground=Pipe To Ground
-diesel-locomotive=Diesel Locomotive
+pump=Pumpe
+pipe=Rør
+pipe-to-ground=Undergrunds rør
+diesel-locomotive=Diesel lokomotiv
 boiler=Boiler
-copper-cable=Copper cable
+copper-cable=Kobber ledning
 small-electric-pole=Small electric pole
 steam-engine=Steam engine
 assembling-machine-1=Assembling machine 1
 assembling-machine-2=Assembling machine 2
 assembling-machine-3=Assembling machine 3
 creeper-spawner=Creeper Spawner
-rocket=Rocket
+rocket=Raket
 land-mine=Land mine
-dry-tree=Dry tree
-big-tree=Big tree
-fish=Fish
-solar-panel=Solar Panel
+dry-tree=Tørt træ
+big-tree=Stort træ
+fish=Fisk
+solar-panel=Solpanel
 creeper=Creeper
 radar=Radar
-wall=Wall
-lab=Lab
+wall=Væg
+lab=Laboratorie
 player-port=Player port
 item-on-ground=Item on ground
-small-lamp=Lamp
+small-lamp=Lampe
 space-module-wreck=Wreck of the space module
 rocket-defense=Rocket defense
 basic-splitter=Splitter
