Updates to control and misc

--- a/data/locale/da/controls.cfg
+++ b/data/locale/da/controls.cfg
@@ -1,24 +1,24 @@
 [controls]
-move-up=Gå op
-move-right=Gå til højre
-move-down=Gå ned
-move-left=Gå til venstre
-shoot-enemy=Skyd fjænde
-shoot-selected=Skyd valgte
-open-character-gui=Åben karakter menu
+move-up=Op
+move-right=HÃ¸jre
+move-down=Ned
+move-left=Venstre
+shoot-enemy=Skyd
+shoot-selected=Skyd
+open-character-gui=Ã…ben karakter menu
 open-technology-gui=Open teknologi menu
 rotate=Roter
 pick-items=Saml op
 close-gui=Luk vindue
 zoom-in=Zoom in
 zoom-out=Zoom ud
-toggle-menu=TOGGLE MENU!
-toggle-driving=Gå in/ud af kørertøj
+toggle-menu=Menu
+toggle-driving=Anvend kÃ¸retÃ¸j
 clean-cursor=Clean cursor
-mine=Grav
+mine=Bryd
 build=Byg
-open-gui=Open object
-drop-cursor=Drop item
+open-gui=Ã…ben objekt
+drop-cursor=Drop genstand
 pick-item=Pick item
 cursor-split=Cursor split
 stack-transfer=Stack transfer
@@ -27,28 +27,28 @@ inventory-transfer=Inventory transfer
 fast-entity-transfer=Fast Entity transfer
 inventory-split=Inventory split
 fast-entity-split=Fast Entity Split
-craft=Craft 1
-craft-5=Craft 5
-craft-all=Craft All
-cancel-craft=Cancel crafting 1
-cancel-craft-5=Cancel Crafting 5
-cancel-craft-all=Cancel Crafting All
-quickbar-1=Quickbar 1
-quickbar-2=Quickbar 2
-quickbar-3=Quickbar 3
-quickbar-4=Quickbar 4
-quickbar-5=Quickbar 5
-quickbar-6=Quickbar 6
-quickbar-7=Quickbar 7
-quickbar-8=Quickbar 8
-quickbar-9=Quickbar 9
-quickbar-10=Quickbar 10
+craft=Lav 1
+craft-5=Lav 5
+craft-all=Lav alle
+cancel-craft=Fortryd at lave 1
+cancel-craft-5=Fortryd at lave 5
+cancel-craft-all=Fortryd at lave alle
+quickbar-1=Hurtigbar 1
+quickbar-2=Hurtigbar 2
+quickbar-3=Hurtigbar 3
+quickbar-4=Hurtigbar 4
+quickbar-5=Hurtigbar 5
+quickbar-6=Hurtigbar 6
+quickbar-7=Hurtigbar 7
+quickbar-8=Hurtigbar 8
+quickbar-9=Hurtigbar 9
+quickbar-10=Hurtigbar 10
 set-filter=Set filter
-clear-filter=Clear filter
-show-info=Show info
-next-weapon=Next weapon
+clear-filter=Fjern filter
+show-info=Vis info
+next-weapon=NÃ¦ste vÃ¥ben
 confirm-message=Confirm message
-connect-train=Connect train
+connect-train=Forbind tog
 disconnect-train=Disconnect train
 editor-increase-resource=Increase resource
 editor-decrease-resource=Decrease resource
