--- a/data/locale/da/misc.cfg
+++ b/data/locale/da/misc.cfg
@@ -1,23 +1,23 @@
-not-enough-ingredients=Not enough ingredients.
-building-too-far=You need to get closer to build that.
-building-collision=It can't be built on this location.
-cant-be-damaged=It cant be damaged.
-cant-be-mined=It cant be mined.
-not-allowed-character-in-file-name=Character "__1__" can't be part of the file name.
-empty-file-name=The file name is empty.
+not-enough-ingredients=Ikke nok ingredienser.
+building-too-far=Du skal tættere på for at bygge her.
+building-collision=Det kan ikke bygges her.
+cant-be-damaged=Det kan ikke skades.
+cant-be-mined=Det kan ikke brydes.
+not-allowed-character-in-file-name="__1__" må ikke være en del af fil navnet.
+empty-file-name=Fil navnet er tomt.
 [difficulty]
 easy=Normal
 normal=Oldschool
 hard=Hardcore
 [inventory-restriction]
-cant-be-burned=__1__ can't be used as fuel.
-cant-be-smelted=__1__ can't be smelted.
-cant-be-used-as-ammo-for=__1__ can't be used as ammo for __2__.
-cant-be-used-as-ammo=__1__ can't be used as ammo.
-cant-be-used-as-gun=__1__ can't be used as gun.
-cant-shoot=__1__ can't shoot __2__s.
-cant-be-used-as-armor=__1__ can't be used as armor.
-cant-be-used-as-mining-tool=__1__ can't be used as mining tool.
+cant-be-burned=__1__ kan ikke bruges som brændstof.
+cant-be-smelted=__1__ kan ikke smæltes.
+cant-be-used-as-ammo-for=__1__ kan ikke bruges som ammunition for __2__.
+cant-be-used-as-ammo=__1__ kan ikke bruges som ammunition.
+cant-be-used-as-gun=__1__ kan ikke bruges som skydevåben.
+cant-shoot=__1__ kan ikke skyde __2__.
+cant-be-used-as-armor=__1__ kan ikke bruges som rustning.
+cant-be-used-as-mining-tool=__1__ kan ikke bruges som hakke.
 cant-insert-into-assembling-machine-without-recipe=You can't insert into assembling machine when no recipe is set.
 cant-insert-into-restricted-slot=Only __1__ can be inserted here, not __2__.
 cant-insert-into-filtered-slot=Only __1__ can go into this slot, if you want to put something different here, the filter have be cleared.
