--- a/data/locale/da/controls.cfg
+++ b/data/locale/da/controls.cfg
@@ -4,29 +4,29 @@ move-right=Højre
 move-down=Ned
 move-left=Venstre
 shoot-enemy=Skyd
-shoot-selected=Skyd
-open-character-gui=Åben karakter menu
-open-technology-gui=Open teknologi menu
+shoot-selected=Skyd valgte
+open-character-gui=Åben karakter oversigt
+open-technology-gui=Åben teknologi oversigt
 rotate=Roter
 pick-items=Saml op
 close-gui=Luk vindue
-zoom-in=Zoom in
+zoom-in=Zoom ind
 zoom-out=Zoom ud
 toggle-menu=Menu
 toggle-driving=Anvend køretøj
-clean-cursor=Clean cursor
+clean-cursor=Ryd markør
 mine=Bryd
 build=Byg
 open-gui=Åben objekt
 drop-cursor=Drop genstand
-pick-item=Pick item
-cursor-split=Cursor split
-stack-transfer=Stack transfer
-stack-split=Stack split
-inventory-transfer=Inventory transfer
-fast-entity-transfer=Fast Entity transfer
-inventory-split=Inventory split
-fast-entity-split=Fast Entity Split
+pick-item=Vælg genstand
+cursor-split=Markør opdeling
+stack-transfer=Stak overførsel
+stack-split=Stak opdeling
+inventory-transfer=Taske overførsel
+fast-entity-transfer=Hurtig entitets overførsel
+inventory-split=Taske opdeling
+fast-entity-split=Hurtig entitets opdeling
 craft=Lav 1
 craft-5=Lav 5
 craft-all=Lav alle
@@ -47,16 +47,16 @@ set-filter=Set filter
 clear-filter=Fjern filter
 show-info=Vis info
 next-weapon=Næste våben
-confirm-message=Confirm message
+confirm-message=Bekræft besked
 connect-train=Forbind tog
-disconnect-train=Disconnect train
-editor-increase-resource=Increase resource
-editor-decrease-resource=Decrease resource
-editor-next-force=Next Force
-editor-remove-entity=Remove entity
-editor-toggle-tile-transitions=Toggle tile transitions
-editor-edit-entity-details=Edit entity details
-editor-show-all-difficulties=Show all difficulties
-editor-show-easy-difficulty=Show easy difficulty
-editor-show-normal-difficulty=Show normal difficulty
-editor-show-hard-difficulty=Show hard difficulty
+disconnect-train=Frakobl tog
+editor-increase-resource=Forøg ressourcer
+editor-decrease-resource=Formindsk ressourcer
+editor-next-force=Næste kræft
+editor-remove-entity=Fjern entitet
+editor-toggle-tile-transitions=Flise overgange til/fra
+editor-edit-entity-details=Rediger entitets detaljer
+editor-show-all-difficulties=Vis alle sværhedsgrader
+editor-show-easy-difficulty=Vis nem sværhedsgrad
+editor-show-normal-difficulty=Vis mellem sværhedsgrad
+editor-show-hard-difficulty=Vis svær sværhedsgrad
