Initial desciption labels translation

--- a/data/locale/da/description-labels.cfg
+++ b/data/locale/da/description-labels.cfg
@@ -1,38 +1,39 @@
 [description]
 wood-amount=Træ
-damage=Damage
-no-ammo=No ammo
-shooting-speed=Shooting speed
-damage-bonus=Damage bonus
-speed=Speed
-crafting-speed=Crafting speed
-storage-size=Storage size
-health=Health
-max-health=Max health
-maximum-power-output=Maximum power output
-mining-power=Mining power
-mining-speed=Mining speed
-amount=Amount
-power-output=Power output
-mining-hardness=Mining hardness
-mining-time=Mining time
-max-energy-consumption=Maximum energy consumption
-force=Force
-water-temperature=Water temperature
-ammo=Ammo
-magazine-size=Magazine size
-absolute-protection=Absolute protection
-relative-protection=Relative protection
-range=Range
-fuel-value=Fuel value
-durability=Durability
-performance=Performance
-available-performance=Available performance
-name=Name
-signals=Signals
-num-available-logistic-robots=Available robots
-logistic-chest-targeted-items-deliver=Deliver
-logistic-chest-targeted-items-pickup=Pickup
-stored-energy=Stored energy
-total-raw=Total raw
-time=Time
+damage=Skade
+no-ammo=Ingen ammunition
+shooting-speed=Skyde hastighed
+damage-bonus=Skade bonus
+speed=Hastighed
+crafting-speed=Produktions hastighed
+storage-size=Opbevarings plads
+health=Helbred
+max-health=Max helbred
+maximum-power-output=Maximum udgangseffekt
+mining-power=Brydekraft
+mining-speed=Brydnings hastighed
+amount=Mængde
+power-output=Udgangseffekt
+mining-hardness=Brydnings sværhed
+mining-time=Brydnings tid
+max-energy-consumption=Maximum energiforbrug
+force=Kraft
+water-temperature=Vand temperatur
+ammo=Ammunition
+magazine-size=Magasin størrelse
+absolute-protection=Absolut beskyttelse
+relative-protection=Relativ beskyttelse
+range=Rækkevidde
+fuel-value=Brændstofs værdi
+durability=Holdbarhed
+performance=Ydeevne
+available-performance=Tilgængelige ydeevne
+name=Navn
+signals=Signaler
+num-available-logistic-robots=Tilgængelige robotter
+logistic-chest-targeted-items-deliver=Lever
+logistic-chest-targeted-items-pickup=Afhent
+stored-energy=Lagret energi
+total-raw=Total rå
+time=Tid
+
