--- a/data/locale/da/entity-descriptions.cfg
+++ b/data/locale/da/entity-descriptions.cfg
@@ -1,8 +1,8 @@
 [entity-description]
-assembling-machine-1=Crafts items up to 2 ingredients.
-assembling-machine-2=Crafts items up to 4 ingredients.
-logistic-robot=Transports stuff between logistic chests.
-logistic-chest-provider=Entry point of the logistic system.
-logistic-chest-storage=Long term storage for the logistic system.
-logistic-chest-requester=Requests specified items from the logistic system.
-basic-splitter=Allows to split transport incoming transport belt cargo 1:1
+assembling-machine-1=Producerer objekter af op til 2 ingredienser.
+assembling-machine-2=Producerer objekter af op til 4 ingredienser.
+logistic-robot=Transporterer ting mellem logistik kister.
+logistic-chest-provider=Indgang til logistisk systemet.
+logistic-chest-storage=Lang tids opbevaring til logistik systemet.
+logistic-chest-requester=Anmoder specifikke ting fra logistisk systemet.
+basic-splitter=Gør det muligt at opdele ting på transportbånd 1:1.
