Fixed character encoding in description labels. Updated menu gui from "andre" to "andet"

--- a/data/locale/da/description-labels.cfg
+++ b/data/locale/da/description-labels.cfg
@@ -1,5 +1,5 @@
 [description]
-wood-amount=Træ
+wood-amount=TrÃ¦
 damage=Skade
 no-ammo=Ingen ammunition
 shooting-speed=Skyde hastighed
@@ -12,27 +12,27 @@ max-health=Max helbred
 maximum-power-output=Maximum udgangseffekt
 mining-power=Brydekraft
 mining-speed=Brydnings hastighed
-amount=Mængde
+amount=MÃ¦ngde
 power-output=Udgangseffekt
-mining-hardness=Brydnings sværhed
+mining-hardness=Brydnings svÃ¦rhed
 mining-time=Brydnings tid
 max-energy-consumption=Maximum energiforbrug
 force=Kraft
 water-temperature=Vand temperatur
 ammo=Ammunition
-magazine-size=Magasin størrelse
+magazine-size=Magasin stÃ¸rrelse
 absolute-protection=Absolut beskyttelse
 relative-protection=Relativ beskyttelse
-range=Rækkevidde
-fuel-value=Brændstofs værdi
+range=RÃ¦kkevidde
+fuel-value=BrÃ¦ndstofs vÃ¦rdi
 durability=Holdbarhed
 performance=Ydeevne
-available-performance=Tilgængelige ydeevne
+available-performance=TilgÃ¦ngelige ydeevne
 name=Navn
 signals=Signaler
-num-available-logistic-robots=Tilgængelige robotter
+num-available-logistic-robots=TilgÃ¦ngelige robotter
 logistic-chest-targeted-items-deliver=Lever
 logistic-chest-targeted-items-pickup=Afhent
 stored-energy=Lagret energi
-total-raw=Total rå
+total-raw=Total rÃ¥
 time=Tid
