--- a/data/locale/da/gui.cfg
+++ b/data/locale/da/gui.cfg
@@ -69,7 +69,7 @@ replay-game=Replay game
 graphics=Grafik
 sound=Lyd
 controls=Kontrol
-other=Andre
+other=Andet
 resume-game=Fortsæt
 restart-game=Genstart
 save-game=Gem spil
