--- a/data/base/campaigns/demo/level-03/locale/da.cfg
+++ b/data/base/campaigns/demo/level-03/locale/da.cfg
@@ -30,3 +30,5 @@ msg-need-better-weapon=This __ITEM__pistol__ won't be enough to hold them, I sho
 msg-need-better-defense=I won't be able to hold it on my own, I could use the __ENTITY__gun-turret__ to defend my base.
 msg-need-light=It is getting dark, I should build __ENTITY__small-lamp__s.
 epilogue=Congratulations, you finished the demo campaign.\nIf you like the game, you can support our indiegogo campaign at www.indiegogo.com/factorio.
+msg-active-gun=You can equip more guns. The active one is marked with a green rectangle.
+msg-change-active-gun=You can switch the active gun by pressing __CONTROL__next-weapon__.
