Updates in the dannis translation.

--- a/data/base/campaigns/beta/level-01/locale/da.cfg
+++ b/data/base/campaigns/beta/level-01/locale/da.cfg
@@ -18,5 +18,5 @@ hint-research-1=Once you fill the lab with the science packs, it will start the 
 hint-research-2=Technologies need certain count of units to be completed, so using more labs will speed up your research as long as you feed them with science packs.
 goal-research-automobilism=Use labs to research automobilism.
 goal-build-car=Craft and place the car.
-goal-enter-car-insert-fuel=Build the car, enter it using and __CONTROL__toggle-driving__ and insert fuel (coal) in the car.
+goal-enter-car-insert-fuel=Build the car, enter it using __CONTROL__toggle-driving__ and insert fuel (coal) in the car.
 hint-to-automate-science-pack-crafting=To speed up your progress, you should use assembling machines to automate the creation of science packs.
