--- a/data/base/campaigns/demo/level-03/locale/da.cfg
+++ b/data/base/campaigns/demo/level-03/locale/da.cfg
@@ -12,7 +12,7 @@ msg-steam-engine-introduction-2=Or this:
 msg-steam-engine-effectivity=The __ENTITY__steam-engine__'s efficiency is highest when it gets water at 100 degrees.
 goal-build-electric-mining-drill=Build a __ENTITY__basic-mining-drill__ on top of some resources.
 goal-power-electric-mining-drill=Connect the __ENTITY__basic-mining-drill__ to the __ENTITY__steam-engine__ using __ENTITY__small-electric-pole__s.
-think-piece-of-cake=Allright, it is all working. That was a piece of cake.
+think-piece-of-cake=Alright, it is all working. That was a piece of cake.
 msg-factory-instruction-1=In order to build __ENTITY__radar__s you will need to gather some __ITEM__iron-plate__s and __ITEM__copper-plate__s first.
 msg-factory-instruction-2=Use __ENTITY__basic-mining-drill__ to mine the resources. It is much faster than the __ENTITY__burner-mining-drill__.
 msg-factory-instruction-3=Keep a steady flow of __ENTITY__coal__ going into your __ENTITY__boiler__s, otherwise you will run out of electricity.
@@ -31,5 +31,6 @@ msg-need-better-weapon=This __ITEM__pistol__ won't be enough to hold them. I sho
 msg-need-better-defense=I won't be able to hold it on my own, I could use the __ENTITY__gun-turret__ to defend my base.
 msg-need-light=It's getting dark, I should build __ENTITY__small-lamp__s.
 epilogue=Congratulations, you have finished the demo campaign!  \n\nThe current alpha version of the game contains much more content than the demo. The alpha already provided many of our users with tens of hours of challenge and fun when building their factories. There are crafting machines, research to unlock new recipes, trains for larger scale logistics, signals for advanced automated setups, smart flying logistic robots and much more. You can also make your own maps or try out some of the existing mods in the alpha. \n\nWe quit our jobs to work full time on Factorio. The game is still in progress and people who buy the alpha help us to finish this game. In case you liked the demo, we will be grateful if you purchase the alpha version at www.factorio.com/preorder. Thank you.
+epilogue-no-demo=Congratulations, you have finished the tutorial(demo) campaign!\n\nAs you have the full game, you can either continue by playing the New Hope campaign, or jump into the freeplay. Either way, it is advised to go through the tips and tricks.\nWe wish you have fun with Factorio and thank you for the support.
 msg-active-gun=You can equip more weapons. The active one is marked with a green rectangle.
 msg-change-active-gun=You can change active weapons by pressing __CONTROL__next-weapon__ (the weapon to change to must have ammo).
