--- a/data/base/campaigns/demo/level-02/locale/da.cfg
+++ b/data/base/campaigns/demo/level-02/locale/da.cfg
@@ -1,18 +1,22 @@
 think-found-mining-site=This looks like an abandoned mining site...
 think-robotic-arm=I wonder what the robotic arm is for.
+msg-inserter-no-power=This machine has run out of fuel.
 goal-open-machine-gui=Open the machine's gui (press __CONTROL__open-gui__).
 goal-insert-fuel-into-inserter-1=Insert fuel inside.
-msg-insterter-introduction-1=This is called a __ENTITY__burner-inserter__. It picks up items in front of it and places them behind.
+msg-inserter-introduction-1=This is called a __ENTITY__burner-inserter__. It picks up items in front of it and places them behind.
 msg-inserter-introduction-2=It can insert or unload stuff into and from machines.
 goal-inspect-chest=Inspect the __ENTITY__wooden-chest__. There might be something useful left.
 think-chest-content-useful=Hmm, this may be of some use...
+msg-gun-equipment=Guns and ammo must be equipped in the framed slots to be active.
 goal-equip-gun=Equip the gun. You can use the shortcut __CONTROL__stack-transfer__ to do so.
 goal-equip-ammo=Equip ammunition. You can use shortcut __CONTROL__stack-transfer__ as well.
 think-creepers-coming=What was that? It sounded like footsteps ...
-kill-creepers=Kill the biters before they get you. Fire by holding __CONTROL__shoot-enemy__. The target closest to the cursor will be shot.
-think-creepers-dead=Phew, they're all dead... but there might be more coming. I'd better prepare myself.
-msg-inserter-2-reversed=Note that the second inserter is reversed.
-goal-rotate-inserter-2=Rotate the inserter by pressing __CONTROL__rotate__ while hovering the cursor over it, so that it puts the iron into the __ENTITY__stone-furnace__. 
+msg-shooting=When enemies are close you can fire at them by holding __CONTROL__shoot-enemy__. The enemy closest to the cursor will be shot.
+kill-creepers=Kill the biters before they get you. Fire by holding __CONTROL__shoot-enemy__.
+think-creepers-dead=Phew, they are dead, but there might be more coming ...
+think-prepare=I better get the production here working and prepare myself.
+msg-inserter-2-reversed=The second inserter is reversed.
+goal-rotate-inserter-2=Rotate the inserter by pressing __CONTROL__rotate__ while hovering the cursor over it, so that it puts the iron into the __ENTITY__stone-furnace__.
 goal-put-fuel-into-inserter-2=Put fuel into the inserter as well.
 think-inserter2-working=Yaay, it's moving!
 msg-rotations-explained=When building something use __CONTROL__rotate__ to rotate before building.
