Changed based on https://github.com/HeilTec/Factorio_Translation_Danish.0.10.6

--- a/data/core/locale/da/gui-map-generator.cfg
+++ b/data/core/locale/da/gui-map-generator.cfg
@@ -1,42 +1,30 @@
 [gui-map-generator]
-frequency=Frequency
-size=Size
-richness=Richness
-title=Map generator
+frequency=Frevens
+size=Størelse
+richness=Rigdom
+title=Verden generator
 terrain-segmentation=Terrain segmentation
-map-width=Map width (empty for infinite)
-map-height=Map height (empty for infinite)
-generate=Generate
-water=Water
-enemy-base=Enemy base
-starting-area=Starting area
-peaceful-mode=Peaceful mode
-peacful-mode-description=Enemies never attack first.
+map-width=Verden brede (tom for uendelig)
+map-height=Verden højde (tom for uendelig)
+generate=Generer
+water=Vand
 
 [frequency]
-none=None
-very-low=Very Low
-low=Low
-normal=Normal
-high=High
-very-high=Very High
+rare=Sjældent
+average=Mellem
+frequent=Ofte
+very-frequent=Meget ofte
 
 [size]
-none=None
-very-small=Very Small
-small=Small
-medium=Medium
-big=Big
-very-big=Very Big
+very-small=Meget lille
+small=Lille
+medium=Mellem
+big=Stor
+very-big=Meget stor
 
 [richness]
-very-poor=Very Poor
-poor=Poor
-regular=Regular
-good=Good
-very-good=Very Good
-
-[gui-map-generator-errors]
-width-have-to-be-number="__1__" is not valid number for map width.
-height-have-to-be-number="__1__" is not valid number for map height.
-no-tiles-selected=At least one tile type has to be allowed.
+very-poor=Meget fattig
+poor=Faggit
+regular=Mellem
+good=Rig
+very-good=Meget rig
