--- a/data/base/locale/da/entity-names.cfg
+++ b/data/base/locale/da/entity-names.cfg
@@ -1,19 +1,17 @@
 [entity-name]
-stone=Stone
-wooden-chest=Wooden chest
-copper-ore=Copper ore
-iron-ore=Iron ore
-coal=Coal
-stone-furnace=Stone Furnace
-steel-furnace=Steel Furnace
-electric-furnace=Electric Furnace
-basic-transport-belt=Transport Belt
-fast-transport-belt=Fast Transport Belt
-express-transport-belt=Express Transport Belt
-basic-transport-belt-to-ground=Underground belt
-fast-transport-belt-to-ground=Fast underground belt
-express-transport-belt-to-ground=Express underground belt
-basic-mining-drill=Electric Mining Drill
+stone=Sten
+wooden-chest=Træ kiste
+copper-ore=Kobber malm
+iron-ore=Jern malm
+coal=Kul
+stone-furnace=Sten ovn
+basic-transport-belt=Transportbånd
+fast-transport-belt=Hurtigt transportbånd
+express-transport-belt=Express transportbånd
+basic-transport-belt-to-ground=Undergrunds bånd
+fast-transport-belt-to-ground=Hurtigt undergrunds bånd
+express-transport-belt-to-ground=Express undergrunds bånd
+basic-mining-drill=Electrisk minebor
 burner-mining-drill=Burner Mining Drill
 basic-turret=Battle turret
 gun-turret=Gun turret
@@ -28,70 +26,40 @@ smart-inserter=Smart inserter
 iron-chest=Iron Chest
 steel-chest=Steel Chest
 smart-chest=Smart Chest
-construction-robot=Construction robot
 logistic-robot=Logistic robot
-logistic-chest-provider=Provider Chest
+logistic-chest-active-provider=Active Provider Chest
+logistic-chest-passive-provider=Passive Provider Chest
 logistic-chest-storage=Storage Chest
 logistic-chest-requester=Requester Chest
 assembling-machine=Assembling Machine
-basic-beacon=Basic Beacon
-car=Car
+car=Bil
 straight-rail=Straight Rail
-straight-rail-remnants=Straight Rail remnants
 curved-rail=Curved Rail
-curved-rail-remnants=Curved Rail remnants
-pump=Pump
-pipe=Pipe
-pipe-to-ground=Pipe-to-Ground
-diesel-locomotive=Diesel Locomotive
+offshore-pump=Pumpe
+pipe=Rør
+pipe-to-ground=Undergrunds rør
+diesel-locomotive=Diesel lokomotiv
 boiler=Boiler
-copper-cable=Copper cable
+copper-cable=Kobber ledning
 small-electric-pole=Small electric pole
 steam-engine=Steam engine
 assembling-machine-1=Assembling machine 1
 assembling-machine-2=Assembling machine 2
 assembling-machine-3=Assembling machine 3
-biter-spawner=Biter Spawner
-rocket=Rocket
+creeper-spawner=Creeper Spawner
+rocket=Raket
 land-mine=Land mine
-dry-tree=Dry tree
-big-tree=Big tree
-fish=Fish
-solar-panel=Solar Panel
-small-biter=Small biter
-small-biter-corpse=Small biter corpse
-medium-biter=Medium biter
-medium-biter-corpse=Medium biter corpse
-big-biter=Big biter
-big-biter-corpse=Big biter corpse
+dry-tree=Tørt træ
+big-tree=Stort træ
+fish=Fisk
+solar-panel=Solpanel
+creeper=Creeper
 radar=Radar
-wall=Wall
-lab=Lab
-player=player
+wall=Væg
+lab=Laboratorie
 player-port=Player port
 item-on-ground=Item on ground
-small-lamp=Lamp
-space-module-wreck=Space module's wreckage
+small-lamp=Lampe
+space-module-wreck=Wreck of the space module
 rocket-defense=Rocket defense
-roboport=Roboport
 basic-splitter=Splitter
-fast-splitter=Fast Splitter
-express-splitter=Express Splitter
-market=Market
-train-stop=Train stop
-rail-signal=Rail signal
-cargo-wagon=Cargo wagon
-big-electric-pole=Big electric pole
-medium-electric-pole=Medium electric pole
-basic-accumulator=Basic accumulator
-substation=Substation
-small-worm-turret=Small worm
-medium-worm-turret=Medium worm
-big-worm-turret=Big worm
-defender=Defender
-distractor=Distractor
-destroyer=Destroyer
-small-remnants=Small Remnants
-medium-remnants=Medium Remnants
-big-remnants=Big Remnants
-wall-remnants=Wall remnants
