--- a/data/base/locale/da/item-descriptions.cfg
+++ b/data/base/locale/da/item-descriptions.cfg
@@ -1,23 +1,5 @@
 [item-description]
-science-pack-1=Used by Lab for research.
-science-pack-2=Used by Lab for research.
-science-pack-3=Used by Lab for research.
-alien-science-pack=Used by Lab for research.
-speed-module=Increases machine's speed at a cost of increased energy consumption.
-speed-module-2=Increases machine's speed at a cost of increased energy consumption.
-speed-module-3=Increases machine's speed at a cost of increased energy consumption.
-productivity-module=Machine will create extra products at a cost of increased energy consumption.
-productivity-module-2=Machine will create extra products at a cost of increased energy consumption.
-productivity-module-3=Machine will create extra products at a cost of increased energy consumption.
-effectivity-module=Decreases energy consumption of machine. Minimum energy consumption is -80%.
-effectivity-module-2=Decreases energy consumption of machine. Minimum energy consumption is -80%.
-effectivity-module-3=Decreases energy consumption of machine. Minimum energy consumption is -80%.
-energy-shield-equipment=Can be inserted into armor.
-energy-shield-mk2-equipment=Can be inserted into armor.
-battery-equipment=Can be inserted into armor.
-battery-mk2-equipment=Can be inserted into armor.
-solar-panel-equipment=Can be inserted into armor.
-basic-laser-defense-equipment=Can be inserted into armor.
-small-combat-robot-capsule=After throwing spawns one combat robot that fights the enemy.
-big-combat-robot-capsule=After throwing spawns three combat robots that fight the enemy.
-smart-inserter=Can filter items. Can be connected to circuit network.
+science-pack-1=Bruges i laboratoriet til forskning.
+science-pack-2=Bruges i laboratoriet til forskning.
+science-pack-3=Bruges i laboratoriet til forskning.
+alien-science-pack=Bruges i laboratoriet til forskning.
