--- a/data/base/locale/da/technology-names.cfg
+++ b/data/base/locale/da/technology-names.cfg
@@ -1,7 +1,6 @@
 [technology-name]
 iron-working=Iron working
 steel-processing=Steel processing
-effect-transmission=Effect Transmission
 automation=Automation
 military=Military
 electronics=Electronics
@@ -19,76 +18,26 @@ optics=Optics
 solar-energy=Solar energy
 laser=Laser
 rocketry=Rocketry
-explosive-rocketry=Explosive rocketry
 rocket-damage=Rocket damage
 rocket-speed=Rocket shooting speed
-bullet-damage=Bullet damage
-bullet-speed=Bullet shooting speed
-shotgun-shell-damage=Shotgun shell damage
-shotgun-shell-speed=Shotgun shell shooting speed
-armor-making=Armor crafting
+armor-making=Armor making
 turrets=Turrets
 laser-turrets=Laser turrets
 flying=Flight
 robotics=Robotics
-construction-robotics=Construction robotics
 logistic-robotics=Logistic robotics
-combat-robotics=Combat robotics
-combat-robot-damage=Combat robot damage
 alien-technology=Alien technology
 logistic-robot-speed=Logistic robot speed
-logistic-robot-storage=Logistic robot cargo size
+logistic-robot-storage=Logistic robot speed cargo size
 rocket-defense=Rocket defense
-research-effectivity=Lab efficiency
-automated-rail-transportation=Automated rail transportation
-rail-signals=Rail signals
-electric-energy-distribution=Electric energy distribution
-electric-energy-accumulators=Electric energy accumulators
-inserter-stack-size-bonus=Inserter item stack size bonus
-character-logistic-slots=Character logistic slots
-advanced-material-processing=Advanced material processing
-modules=Modules
-speed-module=Speed module
-productivity-module=Productivity module
-effectivity-module=Effectivity module
-energy-shield-equipment=Energy shield equipment
-energy-shield-mk2-equipment=Energy shield MK2 equipment
-battery-equipment=Battery equipment
-battery-mk2-equipment=Battery equipment MK2
-solar-panel-equipment=Portable solar panel
-basic-laser-defense-equipment=Personal laser defense
-basic-electric-discharge-defense-equipment=Discharge defense
-fusion-reactor-equipment=Portable fusion reactor
-power-armor=Power armor
-power-armor-mk2=Power armor MK2
-basic-exoskeleton-equipment=Basic exoskeleton equipment
-night-vision-equipment=Night vision
-laser-turret-speed=Laser turret shooting speed
-laser-turret-damage=Laser turret damage upgrade
-gun-turret-damage=Gun turret damage upgrade
-toolbelt=Toolbelt
-follower-robot-count=Follower robot count
-rocket-travel=Rocket travel
-
+research-effectivity=Lab effectivity
 [technology-description]
 iron-working=Basic technology needed to create better iron items.
 automation=Key technology for large scale production.
-logistic-robotics=Logistic robots are a flexibile alternative to conveyor belts.
+logistic-robotics=Logistic robots are flexibile alternative to transport belts.
 logistics=Faster and more flexible ways of transportation.
-solar-energy=Source of infinite energy, but useless at night.
-laser-turrets=Laser turrets are second tier defensive structures. They need electricity, but no ammunition.
-turrets=Allows the building of basic defending structures.
+solar-energy=Source of infinite energy, but doesn't work during night.
+laser-turrets=Laser turrets are second tier defensive structures. They need electricity, but don't need ammo.
+turrets=Allows to build basic defending structures.
 rocket-defense=Rocket defense is needed to defend the landing of our ships.
-steel-processing=Allows the smelting of iron plates into steel bars.
-automated-rail-transportation=Enables to build stations, these can be used to setup automated train routes.
-rail-signals=Enables to organize multiple trains on single rail network
-electric-energy-accumulators=Accumulators are used to store electric energy.
-inserter-stack-size-bonus=When inserters are moving from one container to another (or loading/unloading trains) they can move more items at the same time.
-character-logistic-slots=Allows player to order items from storage and provider chests. These items will be delivered by the logistic robots.
-modules=Opens door to the upgrade modules researches.
-speed-module=Speed modules push the machine speed to the limit but they increase the energy consumption
-productivity-module=Productivity modules push the machine productivity to the limit (Enables to make more products from the same amount of ingredients) but they increase the energy consumption.
-effectivity-module=Effectivity modules decrease the energy consumption of machines.
-combat-robotics=Combat robots help to fight the enemy with their guns. They are spawned from the capsules and have a limited lifetime. Some follow the player.
-toolbelt=Adds second quickbar. This is especially useful for storing capsules.
-follower-robot-count=Adds to the maximum count of active following robots at the same time.
+steel-processing=Allows smelting iron plates into steel bars.
