--- a/data/core/locale/da/controls.cfg
+++ b/data/core/locale/da/controls.cfg
@@ -1,67 +1,62 @@
 [controls]
-move-up=Move up
-move-right=Move right
-move-down=Move down
-move-left=Move left
-shoot-enemy=Shoot enemy
-shoot-selected=Shoot selected
-open-character-gui=Open character screen
-open-technology-gui=Open technology screen
-rotate=Rotate
-pick-items=Pick up items on the ground
-close-gui=Close window
-zoom-in=Zoom in
-zoom-out=Zoom out
-toggle-menu=Toggle menu
-production-statistics=Production statistics
-toggle-map=Toggle world map
-toggle-driving=Enter/Leave vehicle
-clean-cursor=Clear cursor
-mine=Mine
-build=Build
-open-gui=Open object's gui
-drop-cursor=Drop item
-pick-item=Pick up item
-cursor-split=Cursor split
-stack-transfer=Stack transfer
-stack-split=Stack split
-inventory-transfer=Inventory transfer
-fast-entity-transfer=Fast Entity transfer
-inventory-split=Inventory split
-fast-entity-split=Fast Entity Split
-craft=Craft 1
-craft-5=Craft 5
-craft-all=Craft All
-cancel-craft=Cancel crafting 1
-cancel-craft-5=Cancel Crafting 5
-cancel-craft-all=Cancel Crafting All
-quickbar-1=Quickbar 1
-quickbar-2=Quickbar 2
-quickbar-3=Quickbar 3
-quickbar-4=Quickbar 4
-quickbar-5=Quickbar 5
-quickbar-6=Quickbar 6
-quickbar-7=Quickbar 7
-quickbar-8=Quickbar 8
-quickbar-9=Quickbar 9
-quickbar-10=Quickbar 10
+move-up=Op
+move-right=Højre
+move-down=Ned
+move-left=Venstre
+shoot-enemy=Skyd
+shoot-selected=Skyd valgte
+open-character-gui=Åben karakter oversigt
+open-technology-gui=Åben teknologi oversigt
+rotate=Roter
+pick-items=Saml op
+close-gui=Luk vindue
+zoom-in=Zoom ind
+zoom-out=Zoom ud
+toggle-menu=Menu
+toggle-driving=Anvend køretøj
+clean-cursor=Ryd markør
+mine=Bryd
+build=Byg
+open-gui=Åben objekt
+drop-cursor=Drop genstand
+pick-item=Vælg genstand
+cursor-split=Markør opdeling
+stack-transfer=Stak overførsel
+stack-split=Stak opdeling
+inventory-transfer=Taske overførsel
+fast-entity-transfer=Hurtig entitets overførsel
+inventory-split=Taske opdeling
+fast-entity-split=Hurtig entitets opdeling
+craft=Lav 1
+craft-5=Lav 5
+craft-all=Lav alle
+cancel-craft=Fortryd at lave 1
+cancel-craft-5=Fortryd at lave 5
+cancel-craft-all=Fortryd at lave alle
+quickbar-1=Hurtigbar 1
+quickbar-2=Hurtigbar 2
+quickbar-3=Hurtigbar 3
+quickbar-4=Hurtigbar 4
+quickbar-5=Hurtigbar 5
+quickbar-6=Hurtigbar 6
+quickbar-7=Hurtigbar 7
+quickbar-8=Hurtigbar 8
+quickbar-9=Hurtigbar 9
+quickbar-10=Hurtigbar 10
 set-filter=Set filter
-clear-filter=Clear filter
-show-info=Show info
-next-weapon=Next weapon
-confirm-message=Confirm message
-connect-train=Connect train
-disconnect-train=Disconnect train
-editor-increase-resource=Increase resource
-editor-decrease-resource=Decrease resource
-editor-next-force=Next Force
-editor-remove-entity=Remove entity
-editor-toggle-tile-transitions=Toggle tile transitions
-editor-edit-entity-details=Edit entity details
-editor-show-all-difficulties=Show all difficulties
-editor-show-easy-difficulty=Show easy difficulty
-editor-show-normal-difficulty=Show normal difficulty
-editor-show-hard-difficulty=Show hard difficulty
-pause-game=Pause Game
-change-active-quickbar=Change Active QuickBar
-alternative-build=Alternative Build
+clear-filter=Fjern filter
+show-info=Vis info
+next-weapon=Næste våben
+confirm-message=Bekræft besked
+connect-train=Forbind tog
+disconnect-train=Frakobl tog
+editor-increase-resource=Forøg ressourcer
+editor-decrease-resource=Formindsk ressourcer
+editor-next-force=Næste kræft
+editor-remove-entity=Fjern entitet
+editor-toggle-tile-transitions=Flise overgange til/fra
+editor-edit-entity-details=Rediger entitets detaljer
+editor-show-all-difficulties=Vis alle sværhedsgrader
+editor-show-easy-difficulty=Vis nem sværhedsgrad
+editor-show-normal-difficulty=Vis mellem sværhedsgrad
+editor-show-hard-difficulty=Vis svær sværhedsgrad
