--- a/data/base/locale/da/damage-type-names.cfg
+++ b/data/base/locale/da/damage-type-names.cfg
@@ -1,7 +1,7 @@
 [damage-type-name]
-physical=Physical
-fire=Fire
+physical=Fysisk
+fire=Ild
 laser=Laser
-poison=Poison
-explosion=Explosion
+poison=Gift
+explosion=Eksplosion
 acid=Acid
