--- a/data/base/locale/da/entity-names.cfg
+++ b/data/base/locale/da/entity-names.cfg
@@ -7,45 +7,45 @@ coal=Kul
 stone-furnace=Sten ovn
 basic-transport-belt=Transportbånd
 fast-transport-belt=Hurtigt transportbånd
-express-transport-belt=Express transportbånd
+express-transport-belt=Ekspress transportbånd
 basic-transport-belt-to-ground=Undergrunds bånd
 fast-transport-belt-to-ground=Hurtigt undergrunds bånd
-express-transport-belt-to-ground=Express undergrunds bånd
-basic-mining-drill=Electrisk minebor
+express-transport-belt-to-ground=Ekspress undergrunds bånd
+basic-mining-drill=Elektrisk Minebor
 burner-mining-drill=Burner Mining Drill
-basic-turret=Battle turret
-gun-turret=Gun turret
-rocket-turret=Rocket turret
-laser-turret=Laser turret
+basic-turret=Kamp tårn
+gun-turret=Våben tårn
+rocket-turret=Raket tårn
+laser-turret=Laser tårn
 burner-inserter=Burner Inserter
 basic-inserter=Inserter
-long-handed-inserter=Long handed inserter
+long-handed-inserter=Lang håndet inserter
 fast-inserter=Fast inserter
 filter-inserter=Filter inserter
 smart-inserter=Smart inserter
-iron-chest=Iron Chest
-steel-chest=Steel Chest
-smart-chest=Smart Chest
-logistic-robot=Logistic robot
-logistic-chest-active-provider=Active Provider Chest
-logistic-chest-passive-provider=Passive Provider Chest
-logistic-chest-storage=Storage Chest
+iron-chest=Jern Kiste
+steel-chest=Stål Kiste
+smart-chest=Smart Kiste
+logistic-robot=Logistisk Robot
+logistic-chest-active-provider=Aktiv Udbyder Kiste
+logistic-chest-passive-provider=Passiv Udbyder Kiste
+logistic-chest-storage=Opbevarings kiste
 logistic-chest-requester=Requester Chest
-assembling-machine=Assembling Machine
+assembling-machine=Samlings maskine
 car=Bil
-straight-rail=Straight Rail
-curved-rail=Curved Rail
+straight-rail=Lige Skinne
+curved-rail=Buet Skinne
 offshore-pump=Pumpe
 pipe=Rør
 pipe-to-ground=Undergrunds rør
 diesel-locomotive=Diesel lokomotiv
-boiler=Boiler
+boiler=Kedel
 copper-cable=Kobber ledning
-small-electric-pole=Small electric pole
-steam-engine=Steam engine
-assembling-machine-1=Assembling machine 1
-assembling-machine-2=Assembling machine 2
-assembling-machine-3=Assembling machine 3
+small-electric-pole=Lille Elektrisk Pol
+steam-engine=Damp Maskine
+assembling-machine-1= Samlings Maskine 1
+assembling-machine-2=Samlings Maskine 2
+assembling-machine-3=Samlings Maskine 3
 creeper-spawner=Creeper Spawner
 rocket=Raket
 land-mine=Land mine
@@ -59,7 +59,7 @@ wall=Væg
 lab=Laboratorie
 player-port=Player port
 item-on-ground=Item on ground
-small-lamp=Lampe
-space-module-wreck=Wreck of the space module
-rocket-defense=Rocket defense
+small-lamp=Lille Lampe
+space-module-wreck=Rum model vrag
+rocket-defense=Raket Beskyttelse
 basic-splitter=Splitter
